archived/manifests/not-deployed/excalidraw/ingress.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: whiteboard-robotwizard-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: whiteboard.robotwizard.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/name: excalidraw
spec:
  type: ExternalName
  externalName: kube.hacksm.net
  sessionAffinity: None
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: excalidraw-web
  namespace: excalidraw
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whiteboard.hacksm.net`)
      kind: Rule
      services:
        - name: excalidraw
          port: http
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
    - match: Host(`hacksm.net`)
      kind: Rule
      services:
        - name: excalidraw
          port: http
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: excalidraw-websecure
  namespace: excalidraw
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whiteboard.hacksm.net`)
      kind: Rule
      services:
        - name: excalidraw
          port: http
  tls:
    secretName: excalidraw
